--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Version 1.1.1
+
+- Updated to work with Starsector 0.97a-RC11.
+- Added all new Vanilla Portraits introduced with Starsector 0.97a. Which are:
+	* 1 New "Corporate" Portrait.
+	* 7 New "Pirate" Portraits.
+	* 4 New "Characters" Portraits
+
 Version 1.1.0
 
 - Added 4 New portraits to Corporate. (Vanilla + 6 additional Portraits now)
